--- a/pom.xml
+++ b/pom.xml
@@ -7,22 +7,32 @@
 	<packaging>war</packaging>
 	<name>Simple CXF Java-first SOAP project using Spring configuration</name>
 	<description>Simple CXF Java-first SOAP project using Spring configuration</description>
+	<properties>
+        <!-- <apache.cxf.version>2.7.8</apache.cxf.version> -->
+        <apache.cxf.version>3.1.7</apache.cxf.version>          
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
-			<version>3.1.7</version>
-			<exclusions>
+			<version>${apache.cxf.version}</version>
+	<!-- 		<exclusions>
 				<exclusion>
 					<artifactId>jaxb-core</artifactId>
 					<groupId>com.sun.xml.bind</groupId>
 				</exclusion>
-			</exclusions>
+			</exclusions> -->
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-transports-http</artifactId>
-			<version>3.1.7</version>
+			<version>${apache.cxf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http-jetty</artifactId>
+			<version>${apache.cxf.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -39,12 +49,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-transports-http-jetty</artifactId>
-			<version>2.7.8</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -100,7 +104,8 @@
 			<plugin>
 			    <groupId>org.apache.cxf</groupId>
 			    <artifactId>cxf-codegen-plugin</artifactId>
-			    <version>3.1.7</version>
+			    <!-- <version>3.1.7</version> -->
+			    <version>2.7.8</version>
 			    <executions>
 			        <execution>
 			            <id>generate-sources</id>
