added tomcat plugin

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<name>Simple CXF Java-first SOAP project using Spring configuration</name>
 	<description>Simple CXF Java-first SOAP project using Spring configuration</description>
 	<properties>
-        <apache.cxf.version>3.1.7</apache.cxf.version>          
-    </properties>
+		<apache.cxf.version>3.1.7</apache.cxf.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
@@ -49,6 +49,29 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+				<!-- mvn clean install tomcat:run-war to deploy Look for "Running war 
+					on http://xxx" and "Setting the server's publish address to be /yyy" in console 
+					output; WSDL browser address will be concatenation of the two: http://xxx/yyy?wsdl -->
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0</version>
+				<executions>
+					<execution>
+						<id>start-tomcat</id>
+						<goals>
+							<goal>run-war</goal>
+						</goals>
+						<phase>pre-integration-test</phase>
+						<configuration>
+							<port>${test.server.port}</port>
+							<path>/webservice</path>
+							<fork>true</fork>
+							<useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
@@ -57,29 +80,29 @@
 					</configuration>
 				</plugin>
 			</plugins>
-		</pluginManagement>	
+		</pluginManagement>
 		<plugins>
 			<plugin>
-			    <groupId>org.apache.cxf</groupId>
-			    <artifactId>cxf-codegen-plugin</artifactId>
-			    <version>3.1.7</version>
-			    <executions>
-			        <execution>
-			            <id>generate-sources</id>
-			            <phase>generate-sources</phase>
-			            <configuration>
-			                <sourceRoot>src/generated/java</sourceRoot>
-			                <wsdlOptions>
-			                    <wsdlOption>
-			                        <wsdl>${basedir}/src/main/resources/wsdl/Accounts.wsdl</wsdl>
-			                    </wsdlOption>
-			                </wsdlOptions>
-			            </configuration>
-			            <goals>
-			                <goal>wsdl2java</goal>
-			            </goals>
-			        </execution>
-			    </executions>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-codegen-plugin</artifactId>
+				<version>3.1.7</version>
+				<executions>
+					<execution>
+						<id>generate-sources</id>
+						<phase>generate-sources</phase>
+						<configuration>
+							<sourceRoot>src/generated/java</sourceRoot>
+							<wsdlOptions>
+								<wsdlOption>
+									<wsdl>${basedir}/src/main/resources/wsdl/Accounts.wsdl</wsdl>
+								</wsdlOption>
+							</wsdlOptions>
+						</configuration>
+						<goals>
+							<goal>wsdl2java</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
