--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,6 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-				<!-- mvn clean install tomcat:run-war to deploy Look for "Running war 
-					on http://xxx" and "Setting the server's publish address to be /yyy" in console 
-					output; WSDL browser address will be concatenation of the two: http://xxx/yyy?wsdl -->
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.0</version>
@@ -61,13 +58,13 @@
 						<goals>
 							<goal>run-war</goal>
 						</goals>
-						<phase>pre-integration-test</phase>
+						<!-- <phase>pre-integration-test</phase>
 						<configuration>
 							<port>${test.server.port}</port>
 							<path>/webservice</path>
 							<fork>true</fork>
 							<useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader>
-						</configuration>
+						</configuration> -->
 					</execution>
 				</executions>
 			</plugin>
