--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 			<version>4.1.9.RELEASE</version>
 		</dependency>
 		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.0.6</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>4.1.9.RELEASE</version>
@@ -49,25 +54,21 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.0</version>
-				<executions>
-					<execution>
-						<id>start-tomcat</id>
-						<goals>
-							<goal>run-war</goal>
-						</goals>
-						<!-- <phase>pre-integration-test</phase>
-						<configuration>
-							<port>${test.server.port}</port>
-							<path>/webservice</path>
-							<fork>true</fork>
-							<useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader>
-						</configuration> -->
-					</execution>
-				</executions>
-			</plugin>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>2.0</version>
+					<executions>
+						<execution>
+							<id>start-tomcat</id>
+							<goals>
+								<goal>run-war</goal>
+							</goals>
+							<!-- <phase>pre-integration-test</phase> <configuration> <port>${test.server.port}</port> 
+								<path>/webservice</path> <fork>true</fork> <useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader> 
+								</configuration> -->
+						</execution>
+					</executions>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -91,7 +92,7 @@
 							<sourceRoot>src/generated/java</sourceRoot>
 							<wsdlOptions>
 								<wsdlOption>
-									<wsdl>${basedir}/src/main/resources/wsdl/Accounts.wsdl</wsdl>									
+									<wsdl>${basedir}/src/main/resources/wsdl/Accounts.wsdl</wsdl>
 								</wsdlOption>
 							</wsdlOptions>
 						</configuration>
